variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: '(' expected but identifier found.
  if estSurOrange() {
     ^RunHalf:8: error: illegal start of simple expression
} 
^