variables.RunHalf.scala.code
var caseOrange : Int = 0
while (2 * biscuits != caseOrange +1) {
  avance()
  if estSurOrange() {
    caseOrange+=1
  }
  	
}